# Project-Euler

./: .gitignore  Project Euler.sln
FSharp/: FSharp.fsproj  Operators.fs  Program.fs  Utils.fs
haskell/: Utils.hs  main.hs
rust/project_euler/: Cargo.toml
rust/project_euler/src/: main.rs
rust/project_euler/src/problems/: _1.rs  _10.rs  _11.rs  _12.rs  _13.rs  _14.rs  _16.rs  _17.rs  _2.rs  _20.rs  _21.rs  _3.rs  _4.rs  _5.rs  _6.rs  _7.rs  _8.rs  _9.rs  _template.rs  mod.rs
rust/project_euler/src/utils/: math.rs  mod.rs  sequences.rs  vecs.rs
rust/project_euler/src/utils/sequences/: collatz.rs  factorial.rs  fibonacci.rs  mod.rs  triangles.rs
