[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
primes = "0.3.0"

[dev-dependencies]
rstest = "0.16.0"

[profile.test]
opt-level=2
